after, before tamamlandı.

--- a/readLinks-Notebook.ipynb
+++ b/readLinks-Notebook.ipynb
@@ -495,7 +495,7 @@
     "dfLinks=pd.DataFrame(lnk)\n",
     "df=pd.concat([dfDates,dfText,dfLinks],ignore_index=True,axis=1)\n",
     "df.columns=[\"Dates\",\"Text\",\"Link\"]\n",
-    "df.to_csv(\"TeslaNews.csv\",encoding=\"utf-8\")"
+    "df.to_csv(\"TeslaNews.csv\",encoding=\"utf-8\")\n"
    ]
   },
   {
