--- a/preProcessNews.ipynb
+++ b/preProcessNews.ipynb
@@ -334,6 +334,139 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DATE</th>\n",
+       "      <th>TIME</th>\n",
+       "      <th>OPEN</th>\n",
+       "      <th>HIGH</th>\n",
+       "      <th>LOW</th>\n",
+       "      <th>CLOSE</th>\n",
+       "      <th>VOL</th>\n",
+       "      <th>OPENINT</th>\n",
+       "      <th>DATE2</th>\n",
+       "      <th>TIME2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2725</th>\n",
+       "      <td>20201019</td>\n",
+       "      <td>213500</td>\n",
+       "      <td>431.83</td>\n",
+       "      <td>433.04</td>\n",
+       "      <td>431.700</td>\n",
+       "      <td>432.885</td>\n",
+       "      <td>334562</td>\n",
+       "      <td>0</td>\n",
+       "      <td>19/10/2020</td>\n",
+       "      <td>21:35:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2726</th>\n",
+       "      <td>20201019</td>\n",
+       "      <td>214000</td>\n",
+       "      <td>432.86</td>\n",
+       "      <td>432.90</td>\n",
+       "      <td>431.610</td>\n",
+       "      <td>431.980</td>\n",
+       "      <td>274050</td>\n",
+       "      <td>0</td>\n",
+       "      <td>19/10/2020</td>\n",
+       "      <td>21:40:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2727</th>\n",
+       "      <td>20201019</td>\n",
+       "      <td>214500</td>\n",
+       "      <td>432.00</td>\n",
+       "      <td>433.95</td>\n",
+       "      <td>431.955</td>\n",
+       "      <td>433.950</td>\n",
+       "      <td>268830</td>\n",
+       "      <td>0</td>\n",
+       "      <td>19/10/2020</td>\n",
+       "      <td>21:45:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2728</th>\n",
+       "      <td>20201019</td>\n",
+       "      <td>215000</td>\n",
+       "      <td>433.95</td>\n",
+       "      <td>434.12</td>\n",
+       "      <td>432.240</td>\n",
+       "      <td>432.600</td>\n",
+       "      <td>380857</td>\n",
+       "      <td>0</td>\n",
+       "      <td>19/10/2020</td>\n",
+       "      <td>21:50:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2729</th>\n",
+       "      <td>20201019</td>\n",
+       "      <td>215500</td>\n",
+       "      <td>432.60</td>\n",
+       "      <td>432.85</td>\n",
+       "      <td>430.410</td>\n",
+       "      <td>430.830</td>\n",
+       "      <td>1028440</td>\n",
+       "      <td>0</td>\n",
+       "      <td>19/10/2020</td>\n",
+       "      <td>21:55:00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          DATE    TIME    OPEN    HIGH      LOW    CLOSE      VOL  OPENINT  \\\n",
+       "2725  20201019  213500  431.83  433.04  431.700  432.885   334562        0   \n",
+       "2726  20201019  214000  432.86  432.90  431.610  431.980   274050        0   \n",
+       "2727  20201019  214500  432.00  433.95  431.955  433.950   268830        0   \n",
+       "2728  20201019  215000  433.95  434.12  432.240  432.600   380857        0   \n",
+       "2729  20201019  215500  432.60  432.85  430.410  430.830  1028440        0   \n",
+       "\n",
+       "           DATE2     TIME2  \n",
+       "2725  19/10/2020  21:35:00  \n",
+       "2726  19/10/2020  21:40:00  \n",
+       "2727  19/10/2020  21:45:00  \n",
+       "2728  19/10/2020  21:50:00  \n",
+       "2729  19/10/2020  21:55:00  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.tail()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -342,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +726,7 @@
        "[2730 rows x 13 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -602,7 +735,7 @@
     "df[\"DIFF\"]=df[\"OPEN\"]-df[\"CLOSE\"]\n",
     "df.loc[df['DIFF'] < 0, 'STATUS'] = -1\n",
     "df.loc[df['DIFF'] > 0, 'STATUS'] = 1\n",
-    "df.loc[df['DIFF'] == 0, 'STATUS'] = 0\n",
+    "df.loc[df['DIFF'] == 0, 'STATUS'] = 0 ## TO-DO: Bir tolerans aralığındaki değerleri 0 olarak işaretlenmesi yapıladak.\n",
     "df[\"DIFF_PERC\"]=(df[\"DIFF\"]*100)/df[\"OPEN\"]\n",
     "df"
    ]
@@ -616,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -879,7 +1012,7 @@
        "[2730 rows x 14 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -901,7 +1034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -914,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1024,7 +1157,7 @@
        "4  https://www.nasdaq.com/articles/audi-to-launch...  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1043,7 +1176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1059,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1075,7 +1208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1253,7 +1386,7 @@
        "[9536 rows x 5 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1267,7 +1400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1435,13 +1568,13 @@
        "[9536 rows x 5 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
+    "## TO-DO: Stock price EDT formatında mı? Kontrol edilecek.\n",
     "df_news"
    ]
   },
@@ -1454,9 +1587,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tüm kolonlar tekrarlı veri sayısı:  (0, 5)\n",
+      "Text kolonu  tekrarlı veri sayısı:  (100, 5)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -1597,7 +1738,7 @@
        "[100 rows x 4 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1608,14 +1749,16 @@
     "\n",
     "\n",
     "df_temp=df_news[df_news.duplicated(keep=False)]\n",
+    "print(\"Tüm kolonlar tekrarlı veri sayısı: \",df_temp.shape)\n",
     "df_temp=df_news[df_news.duplicated(subset=[\"Text\"],keep=False)]\n",
+    "print(\"Text kolonu  tekrarlı veri sayısı: \",df_temp.shape)\n",
     "df_temp=df_temp.drop([\"Link\"],axis=1)\n",
     "df_temp\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1783,7 +1926,7 @@
        "[262 rows x 5 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1794,7 +1937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1861,7 +2004,7 @@
        "2       9    c   18.0    12.0       14.0"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1900,7 +2043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -2200,7 +2343,7 @@
        "[2730 rows x 16 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2217,177 +2360,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ID</th>\n",
-       "      <th>Dates</th>\n",
-       "      <th>Text</th>\n",
-       "      <th>Link</th>\n",
-       "      <th>DATETIME</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>Oct 13, 2020 7:41AM EDT</td>\n",
-       "      <td>Eikon search string for individual stock moves...</td>\n",
-       "      <td>https://www.nasdaq.com/articles/buzz-u.s.-stoc...</td>\n",
-       "      <td>2020-10-13 07:41:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Oct 13, 2020 7:11AM EDT</td>\n",
-       "      <td>Back in 1993, when drugmaker Amarin's (NASDAQ:...</td>\n",
-       "      <td>https://www.nasdaq.com/articles/the-top-2-cont...</td>\n",
-       "      <td>2020-10-13 07:11:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Oct 13, 2020 7:06AM EDT</td>\n",
-       "      <td>Electric vehicle pioneer Tesla (NASDAQ: TSLA) ...</td>\n",
-       "      <td>https://www.nasdaq.com/articles/forget-tesla-i...</td>\n",
-       "      <td>2020-10-13 07:06:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Oct 13, 2020 6:22AM EDT</td>\n",
-       "      <td>Oct 13 (Reuters) - Tesla Inc TSLA.Osaid on Tue...</td>\n",
-       "      <td>https://www.nasdaq.com/articles/tesla-cuts-pri...</td>\n",
-       "      <td>2020-10-13 06:22:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Oct 13, 2020 5:28AM EDT</td>\n",
-       "      <td>Adds details, backgroundBEIJING, Oct 13 (Reute...</td>\n",
-       "      <td>https://www.nasdaq.com/articles/audi-to-launch...</td>\n",
-       "      <td>2020-10-13 05:28:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1582</th>\n",
-       "      <td>9531</td>\n",
-       "      <td>Apr 29, 2016 3:43AM EDT</td>\n",
-       "      <td>Tesla CEO Elon Musk introduces the Model X. So...</td>\n",
-       "      <td>https://www.nasdaq.com/articles/mark-zuckerber...</td>\n",
-       "      <td>2016-04-29 03:43:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1583</th>\n",
-       "      <td>9532</td>\n",
-       "      <td>Apr 29, 2016 2:22AM EDT</td>\n",
-       "      <td>Ford ( F ) reported an all time record pre-tax...</td>\n",
-       "      <td>https://www.nasdaq.com/articles/ford-posts-rec...</td>\n",
-       "      <td>2016-04-29 02:22:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1584</th>\n",
-       "      <td>9533</td>\n",
-       "      <td>Apr 28, 2016 11:44AM EDT</td>\n",
-       "      <td>InvestorPlaceInvestorPlace - Stock Market New...</td>\n",
-       "      <td>https://www.nasdaq.com/articles/alphabet-inc%3...</td>\n",
-       "      <td>2016-04-28 11:44:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1585</th>\n",
-       "      <td>9534</td>\n",
-       "      <td>Apr 28, 2016 10:23AM EDT</td>\n",
-       "      <td>InvestorPlaceInvestorPlace - Stock Market New...</td>\n",
-       "      <td>https://www.nasdaq.com/articles/apple-inc.-aap...</td>\n",
-       "      <td>2016-04-28 10:23:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1586</th>\n",
-       "      <td>9535</td>\n",
-       "      <td>Apr 28, 2016 10:00AM EDT</td>\n",
-       "      <td>Energy storage has finally captured the imagin...</td>\n",
-       "      <td>https://www.nasdaq.com/articles/lockheed-marti...</td>\n",
-       "      <td>2016-04-28 10:00:00</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>9536 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        ID                     Dates  \\\n",
-       "0        0   Oct 13, 2020 7:41AM EDT   \n",
-       "1        1   Oct 13, 2020 7:11AM EDT   \n",
-       "2        2   Oct 13, 2020 7:06AM EDT   \n",
-       "3        3   Oct 13, 2020 6:22AM EDT   \n",
-       "4        4   Oct 13, 2020 5:28AM EDT   \n",
-       "...    ...                       ...   \n",
-       "1582  9531   Apr 29, 2016 3:43AM EDT   \n",
-       "1583  9532   Apr 29, 2016 2:22AM EDT   \n",
-       "1584  9533  Apr 28, 2016 11:44AM EDT   \n",
-       "1585  9534  Apr 28, 2016 10:23AM EDT   \n",
-       "1586  9535  Apr 28, 2016 10:00AM EDT   \n",
-       "\n",
-       "                                                   Text  \\\n",
-       "0     Eikon search string for individual stock moves...   \n",
-       "1     Back in 1993, when drugmaker Amarin's (NASDAQ:...   \n",
-       "2     Electric vehicle pioneer Tesla (NASDAQ: TSLA) ...   \n",
-       "3     Oct 13 (Reuters) - Tesla Inc TSLA.Osaid on Tue...   \n",
-       "4     Adds details, backgroundBEIJING, Oct 13 (Reute...   \n",
-       "...                                                 ...   \n",
-       "1582  Tesla CEO Elon Musk introduces the Model X. So...   \n",
-       "1583  Ford ( F ) reported an all time record pre-tax...   \n",
-       "1584   InvestorPlaceInvestorPlace - Stock Market New...   \n",
-       "1585   InvestorPlaceInvestorPlace - Stock Market New...   \n",
-       "1586  Energy storage has finally captured the imagin...   \n",
-       "\n",
-       "                                                   Link            DATETIME  \n",
-       "0     https://www.nasdaq.com/articles/buzz-u.s.-stoc... 2020-10-13 07:41:00  \n",
-       "1     https://www.nasdaq.com/articles/the-top-2-cont... 2020-10-13 07:11:00  \n",
-       "2     https://www.nasdaq.com/articles/forget-tesla-i... 2020-10-13 07:06:00  \n",
-       "3     https://www.nasdaq.com/articles/tesla-cuts-pri... 2020-10-13 06:22:00  \n",
-       "4     https://www.nasdaq.com/articles/audi-to-launch... 2020-10-13 05:28:00  \n",
-       "...                                                 ...                 ...  \n",
-       "1582  https://www.nasdaq.com/articles/mark-zuckerber... 2016-04-29 03:43:00  \n",
-       "1583  https://www.nasdaq.com/articles/ford-posts-rec... 2016-04-29 02:22:00  \n",
-       "1584  https://www.nasdaq.com/articles/alphabet-inc%3... 2016-04-28 11:44:00  \n",
-       "1585  https://www.nasdaq.com/articles/apple-inc.-aap... 2016-04-28 10:23:00  \n",
-       "1586  https://www.nasdaq.com/articles/lockheed-marti... 2016-04-28 10:00:00  \n",
-       "\n",
-       "[9536 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "string indices must be integers",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-21-4c97157f9ba7>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mindex\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mrow\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mzip\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf_news\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m     \u001b[0mt\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mrow\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"DATETIME\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: string indices must be integers"
+     ]
     }
    ],
    "source": [
