Tarihe göre fiyat getirme ye kadar tamamlandı

--- a/getNews-Jupyter.ipynb
+++ b/getNews-Jupyter.ipynb
@@ -168,12 +168,10 @@
    "source": [
     "#calculate running time\n",
     "endDate=datetime.datetime.now()\n",
-    "hour=divmod((endDate-startDate).total_seconds(),3600)[0]\n",
-    "hour=math.floor(hour)\n",
-    "minute=divmod((endDate-startDate).total_seconds(),60)[0]\n",
-    "minute=math.floor(minute)\n",
-    "second=divmod((endDate-startDate).total_seconds(),60)[1]\n",
-    "second=math.floor(second)\n",
+    "seconds=(endDate-startDate).total_seconds()\n",
+    "minute, second = divmod(seconds, 60)\n",
+    "hour, minute = divmod(minute, 60)\n",
+    "\n",
     "\n",
     "elapsedTime=\"\\nLinklerin yüklenme süresi: \"+str(hour)+\" saat \"+str(minute)+\" dakika \"+str(second)+\"saniye sürmüştür\"\n",
     "processDateTime=\"\\n\"+str(startDate)+\" tarihinde başladı\\n \"+str(endDate)+\" tarihinde bitti.\"\n",
