--- a/readLinks-Notebook.ipynb
+++ b/readLinks-Notebook.ipynb
@@ -1177,12 +1177,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hour=divmod((endDate-startDate).total_seconds(),3600)[0]\n",
-    "hour=math.floor(hour)\n",
-    "minute=divmod((endDate-startDate).total_seconds(),60)[0]\n",
-    "minute=math.floor(minute)\n",
-    "second=divmod((endDate-startDate).total_seconds(),60)[1]\n",
-    "second=round(second)\n",
+    "seconds=(endDate-startDate).total_seconds()\n",
+    "minute, second = divmod(seconds, 60)\n",
+    "hour, minute = divmod(minute, 60)\n",
+    "\n",
     "elapsedTime=\"Haberlerin okunma süresi: \"+str(hour)+\" saat \"+str(minute)+\" dakika \"+str(second)+\"saniye sürmüştür\"\n",
     "processDateTime=\"\\n\"+str(startDate)+\" tarihinde başladı\\n\"+str(endDate)+\" tarihinde bitti.\""
    ]
@@ -1325,72 +1323,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from nltk import tokenize\n",
-    "import pandas as pd\n",
-    "from Tools import *\n",
-    "import re"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 133,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dates=[]\n",
-    "text=[]\n",
-    "for i in range(0,len(df)):\n",
-    "    d1=str(df[\"Dates\"][i])\n",
-    "    d2=str(df[\"Text\"][i])+\"╝\" # ASCİİ 188\n",
-    "    d3=str(df[\"Link\"][i])\n",
-    "    File.WriteToFile(\"dfDates3.txt\",d1)\n",
-    "    File.WriteToFile(\"dfText3.txt\",d2)\n",
-    "    File.WriteToFile(\"dfLink3.txt\",d3)\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'items'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Roaming\\Python\\Python37\\site-packages\\IPython\\core\\formatters.py\u001b[0m in \u001b[0;36m__call__\u001b[1;34m(self, obj)\u001b[0m\n\u001b[0;32m    343\u001b[0m             \u001b[0mmethod\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mget_real_method\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mobj\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mprint_method\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    344\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mmethod\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 345\u001b[1;33m                 \u001b[1;32mreturn\u001b[0m \u001b[0mmethod\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    346\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    347\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\ProgramData\\Anaconda3\\lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36m_repr_html_\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    732\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minfo\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbuf\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mbuf\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    733\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mbuf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgetvalue\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 734\u001b[1;33m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    735\u001b[0m         \u001b[0mmax_rows\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mget_option\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"display.max_rows\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    736\u001b[0m         \u001b[0mmin_rows\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mget_option\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"display.min_rows\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\ProgramData\\Anaconda3\\lib\\site-packages\\pandas\\io\\formats\\format.py\u001b[0m in \u001b[0;36mto_html\u001b[1;34m(self, buf, encoding, classes, notebook, border)\u001b[0m\n\u001b[0;32m    980\u001b[0m             \u001b[0mWhether\u001b[0m \u001b[0mthe\u001b[0m \u001b[0mgenerated\u001b[0m \u001b[0mHTML\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mIPython\u001b[0m \u001b[0mNotebook\u001b[0m\u001b[1;33m.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    981\u001b[0m         \u001b[0mborder\u001b[0m \u001b[1;33m:\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 982\u001b[1;33m             \u001b[0mA\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0mborder\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mborder\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m \u001b[0mattribute\u001b[0m \u001b[1;32mis\u001b[0m \u001b[0mincluded\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mthe\u001b[0m \u001b[0mopening\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    983\u001b[0m             \u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[1;33m<\u001b[0m\u001b[0mtable\u001b[0m\u001b[1;33m>\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m \u001b[0mtag\u001b[0m\u001b[1;33m.\u001b[0m \u001b[0mDefault\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0moptions\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdisplay\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhtml\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mborder\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[1;33m.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    984\u001b[0m         \"\"\"\n",
-      "\u001b[1;32mC:\\ProgramData\\Anaconda3\\lib\\site-packages\\pandas\\io\\formats\\html.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, formatter, classes, border)\u001b[0m\n\u001b[0;32m     57\u001b[0m         self.col_space = {\n\u001b[0;32m     58\u001b[0m             \u001b[0mcolumn\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;34mf\"{value}px\"\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32melse\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 59\u001b[1;33m             \u001b[1;32mfor\u001b[0m \u001b[0mcolumn\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfmt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcol_space\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     60\u001b[0m         }\n\u001b[0;32m     61\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'items'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0\n",
+      "1.0\n",
+      "5.013581000000002\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [Oct 13,  2020 7:41AM EDTOct 13,  2020 7:11AM EDTOct 13,  2020 7:06AM EDTOct 13,  2020 6:22AM EDTOct 13,  2020 5:28AM EDTOct 13,  2020 3:02AM EDTOct 13,  2020 2:22AM EDTOct 12,  2020 7:25PM EDTOct 12,  2020 5:25PM EDTOct 12,  2020 10:04AM EDTOct 12,  2020 6:34AM EDTOct 11,  2020 8:15PM EDTOct 10,  2020 8:07AM EDTOct 10,  2020 7:25AM EDTOct 9,  2020 7:33PM EDTOct 9,  2020 5:42PM EDTOct 9,  2020 1:07PM EDTOct 9,  2020 8:55AM EDTOct 9,  2020 7:57AM EDTOct 9,  2020 7:28AM EDTOct 9,  2020 7:13AM EDTOct 9,  2020 2:12AM EDTOct 9,  2020 2:12AM EDTOct 8,  2020 9:35PM EDTOct 8,  2020 4:53PM EDTOct 8,  2020 3:27PM EDTOct 8,  2020 2:49PM EDTOct 8,  2020 2:12PM EDTOct 8,  2020 2:02PM EDTOct 8,  2020 1:51PM EDTOct 8,  2020 1:48PM EDTOct 8,  2020 1:30PM EDTOct 8,  2020 12:01PM EDTOct 8,  2020 11:49AM EDTOct 8,  2020 9:00AM EDTOct 8,  2020 8:39AM EDTOct 8,  2020 8:28AM EDTOct 8,  2020 7:04AM EDTOct 8,  2020 6:19AM EDTOct 8,  2020 5:51AM EDTOct 8,  2020 5:31AM EDTOct 8,  2020 4:02AM EDTOct 7,  2020 9:29PM EDTOct 7,  2020 5:57PM EDTOct 7,  2020 4:07PM EDTOct 7,  2020 3:08PM EDTOct 7,  2020 2:13PM EDTOct 7,  2020 2:05PM EDTOct 7,  2020 2:01PM EDTOct 7,  2020 1:48PM EDTOct 7,  2020 1:35PM EDTOct 7,  2020 12:56PM EDTOct 7,  2020 12:45PM EDTOct 7,  2020 12:26PM EDTOct 7,  2020 10:59AM EDTOct 7,  2020 8:23AM EDTOct 7,  2020 8:11AM EDTOct 7,  2020 8:10AM EDTOct 7,  2020 12:49AM EDTOct 6,  2020 5:46PM EDTOct 6,  2020 3:24PM EDTOct 6,  2020 2:53PM EDTOct 6,  2020 2:19PM EDTOct 6,  2020 2:14PM EDTOct 6,  2020 1:44PM EDTOct 6,  2020 12:39PM EDTOct 6,  2020 12:29PM EDTOct 6,  2020 9:52AM EDTOct 6,  2020 9:38AM EDTOct 6,  2020 9:29AM EDTOct 6,  2020 9:10AM EDTOct 6,  2020 8:05AM EDTOct 6,  2020 7:34AM EDTOct 6,  2020 2:15AM EDTOct 5,  2020 11:34PM EDTOct 5,  2020 7:07PM EDTOct 5,  2020 6:11PM EDTOct 5,  2020 2:43PM EDTOct 5,  2020 2:00PM EDTOct 5,  2020 1:36PM EDTOct 5,  2020 1:07PM EDTOct 5,  2020 12:46PM EDTOct 5,  2020 11:11AM EDTOct 5,  2020 10:00AM EDTOct 5,  2020 9:03AM EDTOct 5,  2020 7:16AM EDTOct 5,  2020 7:10AM EDTOct 5,  2020 1:21AM EDTOct 4,  2020 1:26PM EDTOct 4,  2020 9:00AM EDTOct 4,  2020 6:32AM EDTOct 3,  2020 10:35AM EDTOct 2,  2020 7:59PM EDTOct 2,  2020 6:50PM EDTOct 2,  2020 5:34PM EDTOct 2,  2020 5:34PM EDTOct 2.1,  2020 5:02PM EDTOct 2,  2020 4:52PM EDTOct 2,  2020 4:39PM EDTOct 2, ...]\n",
-       "Index: []\n",
-       "\n",
-       "[0 rows x 9601 columns]"
-      ]
-     },
-     "execution_count": 132,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "pdd=pd.read_csv(\"dfDates.txt\")\n",
-    "pdd.head()"
+    "sDate=datetime.datetime.now()\n",
+    "time.sleep(65)\n",
+    "eDate=datetime.datetime.now()\n",
+    "seconds=(eDate-sDate).total_seconds()\n",
+    "m, s = divmod(seconds, 60)\n",
+    "h, m = divmod(m, 60)\n",
+    "print(h)\n",
+    "print(m)\n",
+    "print(s)"
    ]
   },
   {
