Markdown Renklendirmeler eklendi

--- a/preProcessNews.ipynb
+++ b/preProcessNews.ipynb
@@ -1273,6 +1273,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- [ ] iso format--> ytc--edt dönüşümleri incelenecek\n",
+    "- [x] api entegre edildi\n",
+    "```python\n",
+    "    print(\"hello\")\n",
+    "```\n",
+    "\n",
+    "<span style=\"font-family:Consolas\">Text</span>\n",
+    "\n",
+    "<div class=\"alert alert-block alert-info\">\n",
+    "<b>Yapılacaklar:</b></br> \n",
+    "1) iso format--> ytc--edt dönüşümleri incelenecek</br>\n",
+    "2) Belli zaman aralığındaki veriler çekilecek\n",
+    "</div>\n",
+    "\n",
+    "<div class=\"alert alert-block alert-success\">\n",
+    "<b>Tamamlanan:</b> api entegre edildi.\n",
+    "</div>\n",
+    "\n",
+    "<div class=\"alert alert-block alert-danger\">\n",
+    "<b>Hata:</b> Hata yok.\n",
+    "</div>\n",
+    "\n",
+    "<div class=\"alert alert-block alert-warning\">\n",
+    "<b>Dikkat edilecekler:</b> ----\n",
+    "</div>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 70,
    "metadata": {},
@@ -1383,7 +1414,8 @@
     "for stock_data in api_response['data']:\n",
     "    print(stock_data['symbol'])\n",
     "    print(stock_data['high'])\n",
-    "    print(stock_data['date'])\n"
+    "    print(stock_data['date'])\n",
+    "\n"
    ]
   },
   {
